feat [BREAKING]: Use handlebars & 'Window' interface for flexible dev
Use handlebars in nodejs routers to pass EN & KO .env values to .html
Collect customized variables to javascript/index.js, making them global

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -22,7 +22,7 @@
             fill="#000000"/>
     </g>
 </svg><!--end::Svg Icon--></span>
-            <span class="menu-text">영주시 상수 웹조회시스템</span><!-- TODO: 'Company' 문구 -->
+            <span class="menu-text">{{company_ko}} {{role_ko}} 웹조회시스템</span>
           </a>
         </li>
         <li class="menu-section">
@@ -239,21 +239,21 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>
-              <!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">-->
-              <!--                <a href="javascript:;" class="menu-link menu-toggle">-->
-              <!--                  <i class="menu-bullet">-->
-              <!--                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;-->
-              <!--                    <img src="assets/media/symbols/SA005.png">&lt;!&ndash;&ndash;&gt;-->
-              <!--                  </i>-->
-              <!--                  <span class="menu-text ml-2">편락관</span>-->
-              <!--                  <span class="menu-label">-->
-              <!--                    <i class="ol-table-code ol-table-code-wtl" id="wtl_taper_ps"></i>-->
-              <!--                  </span>-->
-              <!--                  <i class="menu-arrow" style="color: transparent;"></i>-->
-              <!--                </a>-->
-              <!--              </li>-->
+<!--              </li>
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;
+                    <img src="assets/media/symbols/SA005.png">&lt;!&ndash;&ndash;&gt;
+                  </i>
+                  <span class="menu-text ml-2">편락관</span>
+                  <span class="menu-label">
+                                  <i class="ol-table-code ol-table-code-wtl" id="wtl_taper_ps"></i>
+                                </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>-->
+<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <i class="ki ki-minus icon-md" style="color: #0045ff;"></i>
@@ -264,8 +264,8 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+              </li>-->
+<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <img src="assets/media/symbols/SA006.png">
@@ -276,7 +276,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>
+              </li>-->
             </ul>
           </div>
         </li>
@@ -339,7 +339,7 @@
                   </i>
                   <span class="menu-text ml-2">가압장</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pres_ps"></i>
+                      <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pres_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
@@ -353,6 +353,19 @@
                   <span class="menu-text ml-2">급수전</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_meta_ps"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <!--                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>-->
+                    <img src="assets/media/symbols/SA211_SCV.png">
+                  </i>
+                  <span class="menu-text ml-2">스케일부스터</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_scvst_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
@@ -457,17 +470,6 @@
                         <!--                        </span>-->
                       </a>
                     </li>
-                    <!--                    <li class="menu-item" aria-haspopup="true">-->
-                    <!--                      <a href="javascript:;" class="menu-link">-->
-                    <!--                        <i class="menu-bullet">-->
-                    <!--                          <span></span>-->
-                    <!--                        </i>-->
-                    <!--                        <span class="menu-text ml-2">경계변</span>-->
-                    <!--                        &lt;!&ndash;                        <span class="menu-label">&ndash;&gt;-->
-                    <!--                        &lt;!&ndash;                          <i class="ol-table-code ol-table-code-wtl"></i>&ndash;&gt;-->
-                    <!--                        &lt;!&ndash;                        </span>&ndash;&gt;-->
-                    <!--                      </a>-->
-                    <!--                    </li>-->
                   </ul>
                 </div>
               </li>
@@ -483,7 +485,7 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <img src="assets/media/symbols/SA199_B.png">
@@ -494,7 +496,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>
+              </li>-->
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -514,7 +516,7 @@
                   </i>
                   <span class="menu-text ml-2">보수공사</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtt_wutl_ht"></i>
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtt_wutl_ht_re"></i><!-- TODO: 테이블 코드 삽입 스크립트 -->
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
@@ -565,7 +567,7 @@
                   <i class="menu-bullet">
                     <i class="fas fa-border-style icon-lg" style="color: #ff1744;"></i>
                   </i>
-                  <span class="menu-text ml-2">급수블럭</span>
+                  <span class="menu-text ml-2">급수구역</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_wtsa_as"></i>
                   </span>
@@ -577,7 +579,7 @@
                   <i class="menu-bullet">
                     <i class="fas fa-border-style icon-lg" style="color: #ff1744;"></i>
                   </i>
-                  <span class="menu-text ml-2">급수구역</span>
+                  <span class="menu-text ml-2">급수분구</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_wtssa_as"></i>
                   </span>
@@ -589,7 +591,7 @@
                   <i class="menu-bullet">
                     <i class="fas fa-border-style icon-lg" style="color: #ff1744;"></i>
                   </i>
-                  <span class="menu-text ml-2">급수분구</span>
+                  <span class="menu-text ml-2">급수블럭</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_wtsba_as"></i>
                   </span>
