--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -26,7 +26,7 @@
 
       <!--begin::Logo-->
       <a href="/">
-        <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
+        <img alt="Logo" src="assets/media/logos/logo-{{company_en}}.png" class="logo-sticky max-h-35px"/>
       </a>
 
       <!--end::Logo-->
@@ -172,6 +172,7 @@
         <!--end::Toggle-->
       </div>
 
+      {{!--
       <div class="outer ml-4 mr-2">
         <div class="inner"></div>
       </div>
@@ -324,6 +325,7 @@
 
         <!--end::Dropdown-->
       </div>
+      --}}
 
       <!--end::Create-->
 
