--- a/tools/webpack/webgis/views/service-register.html
+++ b/tools/webpack/webgis/views/service-register.html
@@ -32,7 +32,7 @@
 
       <!--end::Content-->
 
-      <!--[html-partial:include:{"file":"partials/_footer.html"}]/-->{{> _footer}}
+      <!--[html-partial:include:{"file":"partials/_footer.html"}]/-->
     </div>
 
     <!--end::Wrapper-->
