refactor [BREAKING]: Restructure how global variables are set in DOM
Categorize client global configurations in separate files under /config

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -516,7 +516,7 @@
                   </i>
                   <span class="menu-text ml-2">보수공사</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtt_wutl_ht_re"></i><!-- TODO: 테이블 코드 삽입 스크립트 -->
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtt_wutl_ht"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
