--- a/tools/webpack/webgis/views/partials/_header-mobile.html
+++ b/tools/webpack/webgis/views/partials/_header-mobile.html
@@ -3,7 +3,7 @@
 
   <!--begin::Logo-->
   <a href="/">
-    <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
+    <img alt="Logo" src="assets/media/logos/logo-{{company_en}}.png" class="logo-sticky max-h-35px"/>
   </a>
 
   <!--end::Logo-->
