--- a/tools/webpack/webgis/views/partials/_header-service-register.html
+++ b/tools/webpack/webgis/views/partials/_header-service-register.html
@@ -26,7 +26,7 @@
 
       <!--begin::Logo-->
       <a href="/">
-        <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
+        <img alt="Logo" src="assets/media/logos/logo-{{company_en}}.png" class="logo-sticky max-h-35px"/>
       </a>
 
       <!--end::Logo-->
@@ -181,7 +181,7 @@
         <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-sm">
 
           <!--[html-partial:begin:{"id":"demo1/dist/inc/view/partials/content/dropdowns/dropdown-4","page":"index"}]/-->
-          <!-- TODO: 구별이 쉽게 선택한 메뉴에 primary color 배경을 적용 -->
+
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-3">
             <li class="navi-item">
