fix: Bugs in search by dropdown, datetime sort & edit in service search
접수내용(apl_cde) search filters are set from dropdown (selectpicker)
and requires different formatting for search to work properly.
And because of whitespace within some of the selected values such as
"도로 누수", the search results included invalid results such as
"보호통 누수 및 교체". To ignore whitespaces within these values
whitespaces should be replaced by . for datatables.net library to work.
See: https://datatables.net/reference/api/search()

Datetime sorting bugs were solved by having nodejs server send raw
data to the client and letting the client to the formatting instead
using momentjs library.

Fixed bug where selectpicker dropdowns did not appear upon page load

--- a/tools/webpack/webgis/views/partials/_modal/_service-edit.html
+++ b/tools/webpack/webgis/views/partials/_modal/_service-edit.html
@@ -113,7 +113,7 @@
                   </div>
                   <div class="col-lg-2">
                     <select class="form-control selectpicker" name="pip_dip" title="관경" data-size="6">
-                      <option value="" hidden></option>
+                      <option value="">없음</option>
                       <option value="16">16 mm</option>
                       <option value="20">20 mm</option>
                       <option value="25">25 mm</option>
@@ -127,7 +127,7 @@
                   </div>
                   <div class="col-lg-2">
                     <select class="form-control selectpicker" name="lep_cde" title="누수 위치" data-size="6">
-                      <option value="" hidden></option>
+                      <option value="">없음</option>
                       <option value="새들분기">새들분기점</option>
                       <option value="T분기">T 분기점</option>
                       <option value="클램프">클램프 보수</option>
