--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -239,44 +239,44 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-<!--              </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                <a href="javascript:;" class="menu-link menu-toggle">
-                  <i class="menu-bullet">
-                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;
-                    <img src="assets/media/symbols/SA005.png">&lt;!&ndash;&ndash;&gt;
-                  </i>
-                  <span class="menu-text ml-2">편락관</span>
-                  <span class="menu-label">
-                                  <i class="ol-table-code ol-table-code-wtl" id="wtl_taper_ps"></i>
-                                </span>
-                  <i class="menu-arrow" style="color: transparent;"></i>
-                </a>
-              </li>-->
-<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                <a href="javascript:;" class="menu-link menu-toggle">
-                  <i class="menu-bullet">
-                    <i class="ki ki-minus icon-md" style="color: #0045ff;"></i>
-                  </i>
-                  <span class="menu-text ml-2">상수관말</span>
-                  <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_cap_ps"></i>
-                  </span>
-                  <i class="menu-arrow" style="color: transparent;"></i>
-                </a>
-              </li>-->
-<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                <a href="javascript:;" class="menu-link menu-toggle">
-                  <i class="menu-bullet">
-                    <img src="assets/media/symbols/SA006.png">
-                  </i>
-                  <span class="menu-text ml-2">물방향</span>
-                  <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pipe_dir_ps"></i>
-                  </span>
-                  <i class="menu-arrow" style="color: transparent;"></i>
-                </a>
-              </li>-->
+                <!--              </li>
+                              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                                <a href="javascript:;" class="menu-link menu-toggle">
+                                  <i class="menu-bullet">
+                                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;
+                                    <img src="assets/media/symbols/SA005.png">&lt;!&ndash;&ndash;&gt;
+                                  </i>
+                                  <span class="menu-text ml-2">편락관</span>
+                                  <span class="menu-label">
+                                                  <i class="ol-table-code ol-table-code-wtl" id="wtl_taper_ps"></i>
+                                                </span>
+                                  <i class="menu-arrow" style="color: transparent;"></i>
+                                </a>
+                              </li>-->
+                <!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                                <a href="javascript:;" class="menu-link menu-toggle">
+                                  <i class="menu-bullet">
+                                    <i class="ki ki-minus icon-md" style="color: #0045ff;"></i>
+                                  </i>
+                                  <span class="menu-text ml-2">상수관말</span>
+                                  <span class="menu-label">
+                                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_cap_ps"></i>
+                                  </span>
+                                  <i class="menu-arrow" style="color: transparent;"></i>
+                                </a>
+                              </li>-->
+                <!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                                <a href="javascript:;" class="menu-link menu-toggle">
+                                  <i class="menu-bullet">
+                                    <img src="assets/media/symbols/SA006.png">
+                                  </i>
+                                  <span class="menu-text ml-2">물방향</span>
+                                  <span class="menu-label">
+                                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pipe_dir_ps"></i>
+                                  </span>
+                                  <i class="menu-arrow" style="color: transparent;"></i>
+                                </a>
+                              </li>-->
             </ul>
           </div>
         </li>
@@ -485,7 +485,7 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <img src="assets/media/symbols/SA199_B.png">
@@ -496,7 +496,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>-->
+              </li>
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -505,6 +505,19 @@
                   <span class="menu-text ml-2">소방시설</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_fire_ps"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <!--                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>-->
+                    <img src="assets/media/symbols/EP003_2.png">
+                  </i>
+                  <span class="menu-text ml-2">수압측정</span>
+                  <span class="menu-label">
+                      <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_prme_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
