refactor: Minor restructure of global configuration scripts
Replace menu icons to simpler and more consistent dots

--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -205,7 +205,12 @@
           padding-left: 0.5rem !important;
         }
 
+        // row expand & collapse button
         td.dtr-control:before {
+          border: none;
+          box-shadow: none;
+          color: #0078D7;
+          background-color: transparent;
           font-size: larger;
           font-weight: bolder;
         }
