--- a/tools/webpack/webgis/views/partials/_header-service-register.html
+++ b/tools/webpack/webgis/views/partials/_header-service-register.html
@@ -132,9 +132,9 @@
           <ul class="navi navi-hover navi-active navi-accent py-3">
             <li class="navi-item" data-toggle="modal" data-target="#serv_pres_modal">
               <a href="javascript:;" class="navi-link">
-													<span class="navi-icon">
-														<i class="la la-file-text icon-xl"></i>
-													</span>
+                <span class="navi-bullet">
+                  <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;가압장 관리업체 현황</span>
               </a>
             </li>
@@ -184,11 +184,12 @@
 
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-3">
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">민원</li>
             <li class="navi-item">
               <a href="/service/register" class="navi-link active" id="navi-search-link-0">
-													<span class="navi-icon">
-														<i class="la la-pen icon-xl"></i>
-													</span>
+                <span class="navi-bullet">
+                  <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;민원 등록</span>
               </a>
             </li>
@@ -203,9 +204,9 @@
             <!--            </li>-->
             <li class="navi-item">
               <a href="service/search" class="navi-link" id="navi-search-link-2">
-													<span class="navi-icon">
-														<i class="la la-search-plus icon-xl"></i>
-													</span>
+                <span class="navi-bullet">
+                  <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;민원 조회</span>
               </a>
             </li>
@@ -213,9 +214,9 @@
             <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">근무</li>
             <li class="navi-item" data-toggle="modal" data-target="#serv_sche_modal">
               <a href="javascript:;" class="navi-link">
-													<span class="navi-icon">
-														<i class="la la-calendar icon-xl"></i>
-													</span>
+                <span class="navi-bullet">
+                  <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;비상근무 편성</span>
               </a>
             </li>
