--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -279,6 +279,7 @@
 
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-3">
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">민원</li>
             <li class="navi-item">
               <a href="/service/register" class="navi-link active" id="navi-search-link-0">
                 <span class="navi-bullet">
