fix: Update image layer params dynamically depending on zoom level
Remove global variable for kakao map type state
Add #onImageLayerUpdate() to dynamically update image layer params
Separate event listeners for menu depending on positions(aside,top)

--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -153,6 +153,21 @@
 
         <!--begin::Toggle-->
         <button type="button"
+                class="ol-table-code ol-table-code-geo-top btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                id="geo_line_as">
+          지적선
+        </button>
+
+        <!--end::Toggle-->
+      </div>
+
+      <!--end::Create-->
+
+      <!--begin::Create-->
+      <div class="topbar-item">
+
+        <!--begin::Toggle-->
+        <button type="button"
                 class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
                 id="btn-map-terrain">
           지형도
