--- a/tools/webpack/webgis/views/partials/_aside-swl.html
+++ b/tools/webpack/webgis/views/partials/_aside-swl.html
@@ -73,7 +73,7 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+              <!--<li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <i class="fas fa-border-style icon-lg" style="color: #0000a0"></i>
@@ -85,7 +85,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>
+              </li>-->
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
