fix: Change datatable HTML selector for context menu feature
Set table element's width to full width using "display: block"

--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -122,6 +122,11 @@
 
   .card-body {
     .dataTables_wrapper {
+
+      .row:first-child {
+        display: block;
+      }
+
       .row {
         width: auto;
         margin: 0 10px;
