--- a/tools/webpack/plugins/plugins.scss
+++ b/tools/webpack/plugins/plugins.scss
@@ -109,3 +109,8 @@
 
 // Yet Another DataTables Column Filter: https://github.com/vedmack/yadcf/
 @import "~yadcf/jquery.dataTables.yadcf.css";
+
+// Uppy - Uppy fetches files locally and from remote places like Dropbox or Instagram: https://uppy.io/
+@import '~@uppy/core/dist/style.css';
+@import '~@uppy/dashboard/dist/style.css';
+@import '~@uppy/image-editor/dist/style.css';
