feature: Setup html/partials and css stylesheet for file management

--- a/tools/webpack/webgis/views/partials/_header-data-storage.html
+++ b/tools/webpack/webgis/views/partials/_header-data-storage.html
@@ -30,88 +30,12 @@
       </a>
 
       <!--end::Logo-->
-
-      <!--begin::Desktop Search-->
-      <div class="quick-search quick-search-inline ml-15 w-375px h-35px" id="kt_quick_search_inline">
-
-        <!--begin::Form-->
-        <form method="get" class="quick-search-form">
-          <div class="input-group rounded-sm bg-white">
-            <div class="input-group-prepend">
-												<span class="input-group-text">
-                            <a href="javascript:;"
-                               class="label label-lg label-info label-inline font-weight-bolder mr-1"
-                               data-container="body" data-toggle="tooltip" data-placement="bottom" data-theme="dark"
-                               title="시설물•주소를 검색합니다">
-                            </a>
-												</span>
-            </div>
-            <input type="text" class="form-control h-35px quick-search-inline" placeholder="검색어를 입력하세요..."/>
-            <div class="input-group-append">
-												<span class="input-group-text">
-													<i class="quick-search-close ki ki-close icon-sm text-muted"></i>
-												</span>
-            </div>
-          </div>
-        </form>
-
-        <!--end::Form-->
-
-        <!--begin::Search Toggle-->
-        <div id="kt_quick_search_toggle" data-toggle="dropdown" data-offset="0px,10px"></div>
-
-        <!--end::Search Toggle-->
-
-        <!--begin::Dropdown-->
-        <div class="dropdown-menu dropdown-menu-left dropdown-menu-lg dropdown-menu-anim-up">
-          <div class="quick-search-wrapper scroll" data-scroll="true" data-height="500" data-mobile-height="250"></div>
-        </div>
-
-        <!--end::Dropdown-->
-      </div>
-
-      <!--end::Desktop Search-->
     </div>
 
     <!--end::Left-->
 
     <!--begin::Topbar-->
     <div class="topbar">
-
-      <!--begin::Create-->
-      <div class="topbar-item">
-
-        <!--begin::Toggle-->
-        <button type="button"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
-                id="btn-map-hybrid">
-          일반 지도
-        </button>
-
-        <!--end::Toggle-->
-      </div>
-
-      <!--end::Create-->
-
-      <!--begin::Create-->
-      <div class="topbar-item">
-
-        <!--begin::Toggle-->
-        <button type="button"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
-                id="btn-map-roadview"
-                disabled>
-          로드뷰
-        </button>
-
-        <!--end::Toggle-->
-      </div>
-
-      <!--end::Create-->
-
-      <div class="outer ml-4 mr-2">
-        <div class="inner"></div>
-      </div>
 
       <div class="topbar-item">
 
@@ -132,7 +56,7 @@
           <ul class="navi navi-hover navi-active navi-accent py-3">
             <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">문서자료실</li>
             <li class="navi-item">
-              <a href="/data/storage" class="navi-link" id="navi-data-link-0">
+              <a href="/data/storage" class="navi-link active" id="navi-data-link-0">
                 <span class="navi-bullet">
                   <i class="bullet bullet-dot"></i>
                 </span>
