--- a/tools/webpack/webgis/views/partials/_header-service-search.html
+++ b/tools/webpack/webgis/views/partials/_header-service-search.html
@@ -125,14 +125,32 @@
         <!--end::Toggle-->
 
         <!--begin::Dropdown-->
-        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-md">
+        <div class="dropdown-menu dropdown-menu-sm p-0 m-0 dropdown-menu-right dropdown-menu-anim-up">
 
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-3">
-            <li class="navi-item" data-toggle="modal" data-target="#serv_pres_modal">
-              <a href="javascript:;" class="navi-link">
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">문서자료실</li>
+            <li class="navi-item">
+              <a href="/data/storage" class="navi-link" id="navi-data-link-0">
                 <span class="navi-bullet">
                   <i class="bullet bullet-dot"></i>
+                </span>
+                <span class="navi-text">&nbsp;업로드 및 다운로드</span>
+              </a>
+            </li>
+          </ul>
+
+          <!--end::Navigation-->
+
+          <div class="separator separator-dashed my-1"></div>
+
+          <!--begin::Navigation-->
+          <ul class="navi navi-hover navi-active navi-accent py-3" id="viw_wtl_pipe_lm_filter">
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">가압장</li>
+            <li class="navi-item" data-toggle="modal" data-target="#serv_pres_modal">
+              <a href="javascript:;" class="navi-link" style="white-space: nowrap">
+                <span class="navi-bullet">
+                <i class="bullet bullet-dot"></i>
                 </span>
                 <span class="navi-text">&nbsp;가압장 관리업체 현황</span>
               </a>
@@ -192,15 +210,15 @@
                 <span class="navi-text">&nbsp;민원 등록</span>
               </a>
             </li>
-<!--            <li class="navi-item">-->
-<!--              <a href="#" class="navi-link" id="navi-search-link-1">-->
-<!--													<span class="navi-icon">-->
-<!--														<i class="la la-map-marked-alt icon-xl"></i>-->
-<!--													</span>-->
-<!--                <span class="navi-text">&nbsp;민원 현황 보기</span>-->
-<!--                <span class="label label-light-danger font-weight-bold label-inline">5</span>-->
-<!--              </a>-->
-<!--            </li>-->
+            <!--            <li class="navi-item">-->
+            <!--              <a href="#" class="navi-link" id="navi-search-link-1">-->
+            <!--													<span class="navi-icon">-->
+            <!--														<i class="la la-map-marked-alt icon-xl"></i>-->
+            <!--													</span>-->
+            <!--                <span class="navi-text">&nbsp;민원 현황 보기</span>-->
+            <!--                <span class="label label-light-danger font-weight-bold label-inline">5</span>-->
+            <!--              </a>-->
+            <!--            </li>-->
             <li class="navi-item">
               <a href="service/search" class="navi-link" id="navi-search-link-2">
                 <span class="navi-bullet">
@@ -219,15 +237,15 @@
                 <span class="navi-text">&nbsp;비상근무 편성</span>
               </a>
             </li>
-<!--            <li class="navi-item">-->
-<!--              <form class="px-4 py-3">-->
-<!--                <div class="input-icon">-->
-<!--                  <input type="text" class="form-control" placeholder=""/>-->
-<!--                  <span><i class="la la-flash icon-lg"></i></span>-->
-<!--                </div>-->
-<!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
-<!--              </form>-->
-<!--            </li>-->
+            <!--            <li class="navi-item">-->
+            <!--              <form class="px-4 py-3">-->
+            <!--                <div class="input-icon">-->
+            <!--                  <input type="text" class="form-control" placeholder=""/>-->
+            <!--                  <span><i class="la la-flash icon-lg"></i></span>-->
+            <!--                </div>-->
+            <!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
+            <!--              </form>-->
+            <!--            </li>-->
           </ul>
 
           <!--end::Navigation-->
@@ -251,14 +269,14 @@
       <!--end::Quick panel-->
 
       <!--begin::User-->
-<!--      <div class="topbar-item">-->
-<!--        <button type="button"-->
-<!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
-<!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
-<!--                data-offset="0,10">-->
-<!--          사용자-->
-<!--        </button>-->
-<!--      </div>-->
+      <!--      <div class="topbar-item">-->
+      <!--        <button type="button"-->
+      <!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
+      <!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+      <!--                data-offset="0,10">-->
+      <!--          사용자-->
+      <!--        </button>-->
+      <!--      </div>-->
 
       <!--end::User-->
 
