feature: Add close button to address overlay
Disable dismissal of overlay with single click

--- a/tools/webpack/webgis/views/partials/_content.html
+++ b/tools/webpack/webgis/views/partials/_content.html
@@ -34,7 +34,7 @@
         touch-action: none;
       "
     ></div>
-    <div id="popup" data-trigger="focus" tabindex="0"></div>
+    <div id="popup"></div>
   </div>
   <div id="rvWrapper" class="child">
     <div id="map-roadview" style="height: 100%;"></div>
