--- a/tools/webpack/webgis/stylesheet/overlay.scss
+++ b/tools/webpack/webgis/stylesheet/overlay.scss
@@ -5,20 +5,33 @@
 
   .popover-body {
     color: #7337EE;
-    font-size: 0.9rem !important;
+    font-size: 1.05rem !important;
     font-weight: bolder;
-    padding: 0.5rem 1.5rem;
     min-width: max-content;
+    padding: 0;
   }
 }
 
 .popover-info {
+  padding: 0.5rem 2.5rem 0.5rem 1.5rem;
   border-color: #7337EE;
   color: white;
 }
 
 .popover-info .arrow:before {
   border-top-color: #7337EE;
+}
+
+.popover-close {
+  text-decoration: none;
+  position: absolute;
+  top: 0;
+  right: 0.5rem;
+}
+
+.popover-close:after {
+  color: #7337EE;
+  content: "✖";
 }
 
 // notification
