--- a/tools/webpack/webgis/views/partials/_modal/_ol-info.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-info.html
@@ -37,11 +37,11 @@
             <i class="fas fa-map-marker-alt icon-md" id="btn_location"></i>
           </a>
           <div class="btn-group" role="group">
-            <a href="javascript:;" class="btn btn-outline-secondary btn-hover-primary btn-md font-weight-bolder"
+            <a href="javascript:;" class="btn disabled btn-outline-secondary btn-hover-secondary btn-md font-weight-bolder"
                id="btn_history_modal">
               <i class="far fa-file-alt icon-md" id="btn_history_modal"></i> 보수내역
             </a>
-            <a href="javascript:;" class="btn btn-outline-secondary btn-hover-primary btn-md font-weight-bolder"
+            <a href="javascript:;" class="btn disabled btn-outline-secondary btn-hover-secondary btn-md font-weight-bolder"
                id="btn_photo_modal">
               <i class="far fa-file-image icon-md" id="btn_photo_modal"></i> 사진보기
             </a>
