feat: Allow editing of 'APY_CDE' attribute during service search

--- a/tools/webpack/webgis/views/partials/_modal/_service-edit.html
+++ b/tools/webpack/webgis/views/partials/_modal/_service-edit.html
@@ -98,7 +98,7 @@
                   </div>
                   <label class="col-lg-1 col-form-label text-nowrap">접수내용</label>
                   <div class="col-lg-3">
-                    <select class="form-control selectpicker" disabled name="apy_cde" title="선택하세요" data-size="6">
+                    <select class="form-control selectpicker" name="apy_cde" title="선택하세요" data-size="6">
                       <option value="" hidden></option>
                       <option value="단수">단수</option>
                       <option value="도로 누수">도로 누수</option>
