--- a/tools/webpack/webgis/views/partials/_modal/_pres-manage.html
+++ b/tools/webpack/webgis/views/partials/_modal/_pres-manage.html
@@ -1,12 +1,12 @@
 <!-- Modal-->
 <div class="modal fade" id="serv_pres_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModal2Label"
      aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header" style="justify-content: flex-start">
         <h5 class="modal-title" id="exampleModal2Label">가압장 관리업체 현황</h5>
         <!--begin::Dropdown-->
-        <div class="dropdown dropdown-inline mr-2">
+        <div class="dropdown dropdown-inline ml-2">
           <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
             <i class="la la-download"></i>내보내기
@@ -25,21 +25,24 @@
           </div>
         </div>
         <!--end::Dropdown-->
+        <div class="card-toolbar mr-2" style="position: absolute;right: 0">
+          <a href="#" class="btn btn-icon btn-sm btn-hover-light-primary" data-dismiss="modal">
+            <i class="ki ki-close icon-nm"></i>
+          </a>
+        </div>
       </div>
       <div class="modal-body">
-        <div data-scroll="true" data-height="625">
-          <!--begin: Datatable-->
-          <table class="table table-separate table-head-custom table-responsive-lg hover" id="kt_datatable_pres">
-            <thead>
-            <tr>
-              <th>가압장명</th>
-              <th>관리업체</th>
-              <th>연락처(대표)</th>
-              <th>연락처(현장)</th>
-            </tr>
-            </thead>
-          </table>
-        </div>
+        <!--begin: Datatable-->
+        <table class="table table-separate table-head-custom table-responsive-lg hover" id="kt_datatable_pres">
+          <thead>
+          <tr>
+            <th>가압장명</th>
+            <th>관리업체</th>
+            <th>연락처(대표)</th>
+            <th>연락처(현장)</th>
+          </tr>
+          </thead>
+        </table>
         <!--end: Datatable-->
       </div>
     </div>
