--- a/tools/webpack/webgis/stylesheet/openlayers.scss
+++ b/tools/webpack/webgis/stylesheet/openlayers.scss
@@ -16,3 +16,27 @@
     }
   }
 }
+
+.ol-zoom {
+  top: 40vh;
+  right: 1em;
+  left: unset;
+}
+
+.ol-control {
+  button {
+    font-size: xxx-large;
+    height: 80px;
+    width: 80px;
+    background-color: rgba(0, 120, 215, .5);
+    margin: 3px;
+  }
+
+  button:focus {
+    background-color: rgba(0, 120, 215, .5);
+  }
+
+  button:hover {
+    background-color: rgba(0, 120, 215, .5);
+  }
+}
