--- a/demo5/src/sass/components/_variables.bootstrap.scss
+++ b/demo5/src/sass/components/_variables.bootstrap.scss
@@ -383,6 +383,7 @@ $body-color:                						$dark-75 !default;
 $font-family-base:            						'Noto Sans KR', "sans-serif" !default;
 
 $font-size-base:              						1rem !default; // Assumes the browser default, typically `13px`
+$font-size-xl:               	 					$font-size-base * 1.35 !default;   // 14.04px
 $font-size-lg:               	 					$font-size-base * 1.08 !default;   // 14.04px
 $font-size-sm:                						$font-size-base * .925 !default;   // 12.025px
 $font-size-xs:                						$font-size-base * .8 !default;     // 10.4px
