--- a/demo5/src/sass/components/utilities/_text.scss
+++ b/demo5/src/sass/components/utilities/_text.scss
@@ -76,6 +76,10 @@
     font-size:  $font-size-lg;
 }
 
+.font-size-xl {
+    font-size:  $font-size-xl;
+}
+
 // Responsive font sizes
 @each $breakpoint in map-keys($grid-breakpoints) {
     @include media-breakpoint-up($breakpoint) {
