--- a/tools/webpack/webgis/views/layouts/main.html
+++ b/tools/webpack/webgis/views/layouts/main.html
@@ -20,7 +20,7 @@ License: You must have a valid license purchased only from themeforest(the above
   <meta charset="utf-8"/>
   <title>{{title}}</title>
   <meta name="description" content=""/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <meta name="csrf-token" content="{{_csrfToken}}"/>
 
   <!--begin::Fonts-->
@@ -31,7 +31,7 @@ License: You must have a valid license purchased only from themeforest(the above
   <!--begin::Page Vendors Styles(used by this page)-->
   <link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
   <!--end::Page Vendors Styles-->
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.13.0/css/ol.css" type="text/css">
   <!--begin::Global Theme Styles(used by all pages)-->
   <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
   <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
