--- a/tools/webpack/webgis/views/layouts/main.html
+++ b/tools/webpack/webgis/views/layouts/main.html
@@ -29,6 +29,7 @@ License: You must have a valid license purchased only from themeforest(the above
   <!--end::Fonts-->
 
   <!--begin::Page Vendors Styles(used by this page)-->
+  <link href="assets/css/pages/login/classic/login-4.css" rel="stylesheet" type="text/css" />
   <link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
   <!--end::Page Vendors Styles-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.13.0/css/ol.css" type="text/css">
