--- a/tools/webpack/webgis/views/service-register.html
+++ b/tools/webpack/webgis/views/service-register.html
@@ -7,7 +7,7 @@
 
 <!--begin::Main-->
 
-<!--[html-partial:include:{"file":"partials/_header-mobile.html"}]/-->{{> _header-mobile}}
+<!--[html-partial:include:{"file":"partials/_header-mobile.html"}]/-->
 
 <div class="d-flex flex-column flex-root" data-scroll="true">
 
