--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -230,6 +230,18 @@
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
+                    <i class="ki ki-more-hor icon-lg" style="color: #ff0000;"></i>
+                  </i>
+                  <span class="menu-text ml-2">폐관</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pipe_close_lm"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
                     <i class="ki ki-minus icon-lg" style="color: #18ffff;"></i>
                   </i>
                   <span class="menu-text ml-2">가정급수관</span>
@@ -238,6 +250,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
+              </li>
                 <!--              </li>
                               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                                 <a href="javascript:;" class="menu-link menu-toggle">
