--- a/tools/webpack/webgis/views/index.html
+++ b/tools/webpack/webgis/views/index.html
@@ -48,7 +48,7 @@
 
 <!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-panel.html"}]/-->
 
-<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _modal/_ol-info}} {{> _modal/_ol-history}} {{> _modal/_ol-photo}}
+<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _modal/_ol-info}} {{> _modal/_ol-history}} {{> _modal/_ol-photo}} {{> _modal/_ol-search}}
 
 <!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
 
